src/App.scss
@use './variables.scss';

#title {
  display: flex;
  flex: 1;
}

#page {
  padding: 5px;
  flex: 3;
  display: flex;
  flex-direction: column;
  align-items: center;
}

#content {
  max-width: 60%;

  border: 1px solid variables.$primary-color;
  border-radius: 5px;
  background-color: variables.$white-color;
  box-shadow: 5px 5px variables.$secondary-color;

  overflow-x: hidden;

  display: flex;
  flex-direction: column;

  main {
    padding: 15px;

    text-align: justify;

    max-height: 100%;
    overflow-y: auto;
  }
}

.hidden-overflow {
  max-height: 100%;
  overflow-y: hidden;
}

@media (max-width: variables.$mobile-device-max-width) {
  #title {
    flex: none;
  }

  #page {
    padding: 0;
  }

  #content {
    max-width: 100%;
    height: 100%;

    border-left: none;
    border-right: none;
    border-radius: 0px;
    box-shadow: none;

    main {
      padding: 14px;
      margin: auto 0;

      text-align: left;
    }
  }
}

